test_regress/t/t_disable_bad.out
%Error: t/t_disable_bad.v:9:15: Can't find definition of block/task: 'abcd'
    9 |       disable abcd;
      |               ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Internal Error: t/t_disable_bad.v:9:7: ../V3LinkJump.cpp:#: Unlinked disable statement
    9 |       disable abcd;
      |       ^~~~~~~
                        ... This fatal error may be caused by the earlier error(s); resolve those first.
